<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.portfex.amazingday.amazingday.Training.MainActivity">

    <item android:id="@+id/main_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_24dp"
        android:visible="false"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_donate"
        android:title="@string/menu_donate"
        app:showAsAction="never"/>
</menu>