<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">


    <Button
        android:id="@+id/bt_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_restart"
        android:background="#00FFFFFF"
        android:textColor="@color/buttons_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:textColor="@color/buttons_text"
        android:text="@string/bt_start"
        app:layout_constraintEnd_toStartOf="@+id/bt_done"
        app:layout_constraintStart_toEndOf="@+id/bt_restart"/>

    <Button
        android:id="@+id/bt_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_done"
        android:background="#00FFFFFF"
        android:textColor="@color/buttons_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>