<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="6dp"
    app:cardBackgroundColor="@color/training_item"
    app:contentPadding="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/training_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/training_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/training_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/training_desc"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_title" />


        <TextView
            android:id="@+id/lb_training_desc_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/lb_training_desc_total_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_desc" />

        <TextView
            android:id="@+id/training_desc_total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/training_desc_total_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_training_desc_total_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_training_desc_total_time" />

        <TextView
            android:id="@+id/lb_training_desc_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lb_training_desc_days"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lb_training_desc_total_time" />

        <TextView
            android:id="@+id/training_desc_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/training_desc_days"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_training_desc_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_training_desc_days" />

        <TextView
            android:id="@+id/lb_training_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lb_training_desc_start_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lb_training_desc_days" />

        <TextView
            android:id="@+id/training_desc_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/training_desc_start_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_training_start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_training_start_time" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>