<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="6dp"
    app:cardBackgroundColor="@color/color_training_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/exercise_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/exercise_number"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exercise_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/exercise_title"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/title_text"
                app:layout_constraintStart_toEndOf="@+id/exercise_number"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exercise_desc_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_desc"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/small_label_text"
                app:layout_constraintStart_toEndOf="@+id/dumbbell"
                app:layout_constraintTop_toBottomOf="@+id/exercise_title" />

            <ImageView
                android:id="@+id/dumbbell"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintStart_toStartOf="@+id/exercise_number"
                app:layout_constraintTop_toBottomOf="@+id/exercise_number"
                app:srcCompat="@drawable/ic_fitness_center_black_24dp" />

            <ImageButton
                android:id="@+id/exercise_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_expand_less_black_24dp" />

            <ImageView
                android:id="@+id/exercise_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/exercise_expand"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_done_black_24dp" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_last_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="@color/info_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lb_info_last_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|right"
                        android:text="@string/lb_last_result"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/info_label"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/last_result_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_result_time"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/info_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:cardBackgroundColor="@color/info_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/card_last_result">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lb_info_standard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|right"
                        android:text="@string/lb_standard"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/info_label"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/standard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_result_time"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/info_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:cardBackgroundColor="@color/info_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/card_standard">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lb_info_sets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|right"
                        android:text="@string/lb_sets"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/info_label"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/sets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sets"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/info_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:cardBackgroundColor="@color/info_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/card_sets">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lb_info_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|right"
                        android:text="@string/lb_weight"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/info_label"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/info_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:cardBackgroundColor="@color/info_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/card_weight">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lb_info_rest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top|right"
                        android:text="@string/lb_rest"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/info_label"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rest"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/info_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>